--- a/src/components/Stepper/style.css
+++ b/src/components/Stepper/style.css
@@ -17,7 +17,7 @@
 }
 
 .stepper-text {
-    font-family: 'Univers LT Std';
+    font-family: 'Univers B';
     font-style: normal;
     font-weight: 700;
     font-size: 22px;
