--- a/src/components/FinalPage/style.css
+++ b/src/components/FinalPage/style.css
@@ -18,7 +18,7 @@
 
 .grey-box {
     position: relative;
-    background-color: #F4F6F8;
+    background-color: #d9d9d980;
     border-radius: 50px;
 }
 
