--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,9 +1,11 @@
 .modal-popup {
     cursor: pointer;
+    margin-bottom: 15px;
+    width: 25px;
 }
 
 .modal-content {
-    font-family: 'Univers LT Std';
+    font-family: 'Univers Roman';
     border-radius: 0.3rem;
 }
 
@@ -12,10 +14,8 @@
 }
 
 .modal-header {
+    position: relative;
     border-bottom: none;
-    gap: 15px;
-    justify-content: flex-start;
-    margin-top: 25px;
 }
 
 .modal-header .btn-close {
