--- a/src/components/Stepper/style.css
+++ b/src/components/Stepper/style.css
@@ -1,5 +1,9 @@
 .stepper-nav-item {
     border-top: 3px solid;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     width: 140px;
 }
 
