fix for #2996, #2997 and #3000

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@
     font-family: Univers Roman;
   }
 
+  .form-control {
+    border-radius: 0px;
+  }
+  
   input {
     font-family: Univers B;
   }
