--- a/src/components/FinalPage/style.css
+++ b/src/components/FinalPage/style.css
@@ -1,6 +1,7 @@
 .final-headline {
     position: relative;
 }
+
 .final-headline .stepper-text {
     position: absolute;
     top: 110px;
@@ -40,4 +41,183 @@
     color: white;
     cursor: pointer;
     margin-top: -130px;
-  }
+}
+
+/* first pdf-page style */
+
+.v1_69 {
+    width: 595px;
+    height: 842px;
+    background: rgba(255, 255, 255, 1);
+    opacity: 1;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.v1_70 {
+    width: 595px;
+    height: 623px;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    opacity: 1;
+    position: absolute;
+    top: 132px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.v1_71 {
+    width: 100%;
+    height: 741px;
+    background: rgba(255, 255, 255, 1);
+    opacity: 1;
+    position: absolute;
+    overflow: hidden;
+}
+
+.v1_72 {
+    width: 100%;
+    height: 430px;
+    background: rgba(217, 217, 217, 1);
+    opacity: 1;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.v1_73 {
+    width: 100%;
+    height: 620px;
+    background: url("../../assets/images/v1_73.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    opacity: 1;
+    position: absolute;
+    top: 0px;
+    overflow: hidden;
+}
+
+.v1_74 {
+    width: 595px;
+    height: 586px;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    opacity: 1;
+    position: absolute;
+    top: 169px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.v1_75 {
+    width: 466px;
+    color: rgba(226, 6, 19, 1);
+    position: absolute;
+    top: 44px;
+    left: 43px;
+    font-family: Univers LT Std;
+    font-weight: 65 Bold;
+    font-size: 16px;
+    opacity: 1;
+    text-align: left;
+}
+
+.v1_76 {
+    width: 466px;
+    color: rgba(76, 75, 75, 1);
+    position: absolute;
+    top: 70px;
+    left: 43px;
+    font-family: Univers LT Std;
+    font-weight: 55 Roman;
+    font-size: 10px;
+    opacity: 1;
+    text-align: left;
+}
+
+.v1_77 {
+    width: 595px;
+    height: 10px;
+    background: rgba(226, 6, 19, 1);
+    opacity: 1;
+    position: absolute;
+    top: 755px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.v1_78 {
+    width: 371px;
+    height: 2px;
+    background: rgba(226, 6, 19, 1);
+    opacity: 1;
+    position: absolute;
+    top: 674px;
+    left: 48px;
+    overflow: hidden;
+}
+
+.v1_79 {
+    width: 129px;
+    height: 70px;
+    background: rgba(255, 255, 255, 1);
+    padding: 20px 20px;
+    margin: 10px;
+    opacity: 1;
+    position: absolute;
+    top: 727px;
+    left: 417px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15000000596046448);
+    overflow: hidden;
+}
+
+.v1_80 {
+    width: 89px;
+    height: 30px;
+    background: url("../../assets/images/v1_80.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    opacity: 1;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    overflow: hidden;
+}
+
+.v1_81 {
+    width: 435px;
+    color: rgba(255, 255, 255, 1);
+    position: absolute;
+    top: 568px;
+    left: 52px;
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15000000596046448);
+    font-family: Univers LT Std;
+    font-weight: 65 Bold;
+    font-size: 30px;
+    opacity: 1;
+    text-align: left;
+}
+
+.v1_82 {
+    width: 466px;
+    color: rgba(255, 255, 255, 1);
+    position: absolute;
+    top: 683px;
+    left: 52px;
+    font-family: Segoe UI;
+    font-weight: Semibold;
+    font-size: 10px;
+    opacity: 1;
+    text-align: left;
+}
+
+.page-1, .page-2, .page-3 {
+    width: 595px;
+}
+
+#pdf-section {
+    display: none;
+}
