--- a/src/components/FinalPage/style.css
+++ b/src/components/FinalPage/style.css
@@ -214,9 +214,9 @@
     text-align: left;
 }
 
-.page-1, .page-2, .page-3 {
+/* .page-1, .page-2, .page-3 {
     width: 595px;
-}
+} */
 
 #pdf-section {
     display: none;
