--- a/src/components/SelectionChoice/style.css
+++ b/src/components/SelectionChoice/style.css
@@ -9,6 +9,11 @@
     align-items: center;
 }
 
+.choice-item img {
+    width: 50px;
+    height: 50px;
+}
+
 input[type="radio"] {
     /* Add if not using autoprefixer */
     -webkit-appearance: none;
@@ -113,6 +118,7 @@ input[type=number] {
 
 .white-box {
     background-color: white;
+    border-radius: 5px;
 }
 
 .report-section .hstack {
@@ -133,11 +139,11 @@ input[type=number] {
 }
 
 .dot {
-    height: 25px;
-    width: 25px;
+    height: 15px;
+    width: 15px;
     background-color: #bbb;
     border-radius: 50%;
-    display: inline-block;
+    display: block;
 }
 
 .landlord-dot {
@@ -146,7 +152,6 @@ input[type=number] {
 
 .landlord-text {
     color: rgba(0, 155, 180, 1);
-    font-size: 11px;
 }
 
 .tenant-dot {
@@ -155,7 +160,6 @@ input[type=number] {
 
 .tenant-text {
     color: rgba(0, 155, 180, 0.15);
-    font-size: 11px;
 }
 
 .black-text {
@@ -176,13 +180,26 @@ input[type=number] {
 }
 
 .extra-space {
-    padding-bottom: 100px;
+    padding-bottom: 120px;
 }
 
 .move-top {
-    margin-top: -75px;
+    margin-top: -90px;
 }
 
 .hidden-element-selection-4, .hidden-element-selection-5 {
     display: none;
+}
+
+.fs-22 {
+    font-size: 22px;
+}
+
+.fs-40 {
+    font-size: 40px;
+}
+
+#bar-canvas {
+    /* width: 565px; */
+    height: 400px;
 }
